--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <img
               class="image-product"
               src="./images/image-product-1-thumbnail.jpg"
-              alt=""
+              alt="image-product"
             />
             <div class="cart-checkout-details">
               <p class="cart-checkout-product">Fall Limited Edition Sneakers</p>
@@ -264,13 +264,13 @@
         <nav class="nav-sidebar">
           <ul class="list list-sidebar">
             <li class="list-item list-menu"><a href="#">Collections</a></li>
-            <li class="list-item list-menu"><a href="#new">Men</a></li>
-            <li class="list-item list-menu"><a href="#popular">Women</a></li>
+            <li class="list-item list-menu"><a href="#men">Men</a></li>
+            <li class="list-item list-menu"><a href="#women">Women</a></li>
             <li class="list-item list-menu">
-              <a href="#trending">About</a>
+              <a href="#about">About</a>
             </li>
             <li class="list-item list-menu">
-              <a href="#categories">Contact</a>
+              <a href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
