--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
                 />
               </div>
               <button class="btn add-to-cart" type="submit">
-                <ion-icon class="icon-cart" name="cart-outline"></ion-icon>
+                <ion-icon
+                  class="icon-cart"
+                  name="cart-outline"
+                  aria-label="cart"
+                ></ion-icon>
                 <span>Add to cart</span>
               </button>
             </div>
